# aozora2text

./: .gitignore  Cargo.toml  README.en.md  README.md  build.rs
.github/workflows/: ci.yml
crates/aozora-core/: Cargo.toml
crates/aozora-core/data/: jis2ucs.json
crates/aozora-core/src/: accent.rs  char_type.rs  delimiters.rs  document.rs  encoding.rs  gaiji.rs  jis_table.rs  lib.rs  token.rs  tokenizer.rs  zip.rs
crates/aozora-core/src/node/: block.rs  midashi.rs  mod.rs  style.rs
crates/aozora-core/src/parser/: block_parser.rs  command_parser.rs  content_parser.rs  mod.rs  reference_parser.rs  reference_resolver.rs  ruby_parser.rs  utils.rs
crates/aozora-html-converter/: Cargo.toml
crates/aozora-html-converter/src/: lib.rs  main.rs  options.rs  renderer.rs
crates/aozora-html-converter/test_data/: compat_test.rb
crates/aozora2/: Cargo.toml
crates/aozora2/src/: lib.rs  main.rs  strip.rs
crates/aozora2/src/commands/: html.rs  mod.rs  strip.rs
crates/aozora2/src/html/: block_manager.rs  document_renderer.rs  mod.rs  node_renderer.rs  presentation.rs  renderer.rs  tag_generator.rs
crates/aozora2text/: Cargo.toml  README.md
crates/aozora2text/src/: extractor.rs  lib.rs  main.rs
data/: accent_table.json
src/: accent.rs  document.rs  encoding.rs  extractor.rs  gaiji.rs  lib.rs  main.rs  tokenizer.rs
