[workspace]
resolver = "2"
members = [
    "crates/aozora-core",
    "crates/aozora2",
    "crates/aozora2text",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/takahashim/aozora2"

[workspace.dependencies]
aozora-core = { path = "crates/aozora-core" }
aozora2 = { path = "crates/aozora2" }
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
flate2 = "1"
once_cell = "1"
serde_json = "1"
zip = "2"
