[package]
name = "aozora-core"
version = "0.7.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Aozora Bunko format processing"
readme = "README.en.md"
keywords = ["aozora", "bunko", "japanese", "text", "parser"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
once_cell.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
zip.workspace = true

[build-dependencies]
serde_json.workspace = true
