[package]
name = "aozora-html-converter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Convert Aozora Bunko format to HTML"
keywords = ["aozora", "bunko", "japanese", "html", "converter"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "aozora-html-converter"
path = "src/main.rs"

[dependencies]
aozora-core = { path = "../aozora-core" }
clap.workspace = true
