[package]
name = "aozora2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aozora Bunko format converter CLI"
readme = "../../README.en.md"
keywords = ["aozora", "bunko", "japanese", "text", "converter"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "aozora2"
path = "src/main.rs"

[lib]
name = "aozora2"
path = "src/lib.rs"

[dependencies]
aozora-core.workspace = true
clap.workspace = true
encoding_rs.workspace = true
